minio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  labels:
    app: minio
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: minio
            port:
              number: 9001
    host: minio.localhost
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: minio
            port:
              number: 9000
    host: minio-backend.localhost
  tls:
  - hosts:
    - minio.localhost
    - minio-backend.localhost
    secretName: cluster-selfsigned-cert
